# Alphax_Document_Reader

./: MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
alphax_document_reader/: api.py  hooks.py  modules.txt
alphax_document_reader/alphax_document_reader/: api.py  hooks.py  patches.txt
alphax_document_reader/alphax_document_reader/doctype/document_reader_settings/: document_reader_settings.json  document_reader_settings.py
alphax_document_reader/alphax_document_reader/page/document_reader/: document_reader.js  document_reader.json
alphax_document_reader/alphax_document_reader/utils/: extract.py  image.py  office.py  pdf.py  sheet.py
alphax_document_reader/config/: desktop.py
alphax_document_reader/doctype/alphax_doc_reader_settings/: alphax_doc_reader_settings.js  alphax_doc_reader_settings.json  alphax_doc_reader_settings.py
alphax_document_reader/doctype/alphax_document/: alphax_document.js  alphax_document.json  alphax_document.py
alphax_document_reader/public/css/: alphax_doc_reader.css
alphax_document_reader/public/js/: alphax_doc_reader.js
alphax_document_reader/utils/: extractors.py
